# lthash-rs

./: .gitignore  Cargo.toml  Claude.md  PERFORMANCE.md  README.md  benchmark-baseline.txt  benchmark-optimized.txt
benches/: lthash_bench.rs
src/: blake2xb.rs  blake3_xof.rs  error.rs  lib.rs  lthash.rs
tests/: integration_test.rs  test_vectors.rs
