[package]
name = "lthash"
version = "0.1.0"
edition = "2021"

[dependencies]
libsodium-sys = { version = "0.2", optional = true }
blake3 = { version = "1.5", optional = true }
thiserror = "1.0"
zeroize = { version = "1", features = ["zeroize_derive"] }
base64 = "0.22"
rayon = { version = "1.10", optional = true }
walkdir = { version = "2", optional = true }

[dev-dependencies]
criterion = "0.5"
rayon = "1.10"  # Always available for benchmarks

[features]
default = ["blake3-backend"]
blake3-backend = ["blake3"]
folly-compat = ["libsodium-sys"]  # For Facebook Folly C++ compatibility
parallel = ["rayon", "walkdir"]  # Enable parallel hashing

[lib]
name = "lthash"
path = "src/lib.rs"

[[bin]]
name = "lthash_example"
path = "src/bin/example.rs"
required-features = ["folly-compat"]

[[bin]]
name = "test_cross_compat"
path = "src/bin/test_cross_compat.rs"
required-features = ["folly-compat"]

[[bin]]
name = "lthash"
path = "src/bin/lthash_cli.rs"
# Works with either backend (uses LtHash, not Blake2xb directly)

[[bin]]
name = "lthash_dir"
path = "src/bin/lthash_dir.rs"
required-features = ["parallel"]

[[bench]]
name = "lthash_bench"
harness = false