[package]
name = "lthash"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"  # Required by blake3 1.5

[dependencies]
libsodium-sys = { version = "0.2", optional = true }
blake3 = { version = "1.5", optional = true }
thiserror = "1.0"
zeroize = { version = "1", features = ["zeroize_derive"] }
base64 = "0.22"
rayon = { version = "1.10", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
rayon = "1.10"  # Always available for benchmarks

[features]
default = ["blake3-backend", "parallel"]
blake3-backend = ["blake3"]
folly-compat = ["libsodium-sys"]  # For Facebook Folly C++ compatibility
parallel = ["rayon"]  # Enable parallel hashing

[lib]
name = "lthash"
path = "src/lib.rs"

[[bin]]
name = "lthash_example"
path = "src/bin/example.rs"
required-features = ["folly-compat"]

[[bin]]
name = "test_cross_compat"
path = "src/bin/test_cross_compat.rs"
required-features = ["folly-compat"]

[[bin]]
name = "lthash"
path = "src/bin/lthash_cli.rs"
# Works with either backend (uses LtHash, not Blake2xb directly)

[[bin]]
name = "lthash_dir"
path = "src/bin/lthash_dir.rs"
required-features = ["parallel"]

[[bench]]
name = "lthash_bench"
harness = false